[package]
name = "sgl"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/sgl_math"]

[dependencies]
sgl_math = { version = "*", path = "crates/sgl_math" }

bytemuck = "1.12"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
wgpu = "0.14"
winit = "0.27"

[[example]]
name = "sandbox"
path = "sandbox/src/main.rs"

[[example]]
name = "lines"
path = "examples/lines.rs"

[[example]]
name = "pixel_size"
path = "examples/pixel_size.rs"
