[package]
name = "sgl"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/sgl_math"]

[features]
default = ["image"]

[dependencies]
sgl_math = { version = "0.1.0", path = "crates/sgl_math" }

bytemuck = "1.12"
futures = "0.3"
log = "0.4"
mint = "0.5"
thiserror = "1.0"
wgpu = "0.14"
winit = "0.27"

image = { version = "0.24", default-features = false, features = [
    "png",
], optional = true }

[[example]]
name = "sandbox"
path = "sandbox/src/main.rs"

[[example]]
name = "lines"
path = "examples/lines.rs"

[[example]]
name = "pixel_size"
path = "examples/pixel_size.rs"

[[example]]
name = "sprite"
path = "examples/sprite.rs"
